# ModelGenerator

./: .pre-commit-config.yaml  404.html  Dockerfile  README.md  constraints.txt  index.html  objects.inv  pyproject.toml  sitemap.xml  tests.py
.github/workflows/: docs.yml
api_reference/adapters/: index.html
api_reference/backbones/: index.html
api_reference/callbacks/: index.html
api_reference/data/: index.html
api_reference/tasks/: index.html
api_reference/trainer/: index.html
experiment_design/: index.html
experiment_design/backbones/: index.html
experiment_design/data/: index.html
experiment_design/datafiles/: index.html
experiment_design/tasks/: index.html
experiments/AIDO.Cell/: GSM6614348_analysis.ipynb  cell_utils.py  pert_classification.yaml  quickstart.ipynb  requirements.txt  transcriptomic_clock.yaml  tutorial_cell_classification.ipynb  tutorial_target_id.ipynb
experiments/AIDO.MM/: README.md
experiments/AIDO.StructureTokenizer/: structure_prediction_demo.ipynb
experiments/AIDO.Tissue/: README.md  emb.xenium.yaml
experiments/Biomap/: cell_type_classification.yaml
genbio_scripts/: batch_migrate.py
huggingface/aido.cell/: README.md  embed.py  finetune.py  inference.py  pyproject.toml  temp_adata.h5ad
huggingface/aido.cell/aido_cell/: __init__.py
huggingface/aido.cell/aido_cell/models/: __init__.py  modeling_cellfoundation.py
huggingface/aido.cell/aido_cell/utils/: __init__.py  gene_alignment.py  preprocessing.py
huggingface/aido.rna/: README.md  embed.py  finetune.py  inference.py  pyproject.toml
huggingface/aido.rna/aido_rna/: __init__.py
huggingface/aido.rna/aido_rna/models/: __init__.py  configuration_rnabert.py  modeling_rnabert.py  tokenization_rnabert.py
huggingface/aido.rna/aido_rna/utils/: __init__.py  preprocessing.py
modelgenerator/: callbacks.py  main.py
modelgenerator/adapters/: adapters.py  fusion.py
modelgenerator/backbones/: __init__.py  backbones.py  base.py
modelgenerator/data/: __init__.py  base.py  data.py
modelgenerator/prot_inv_fold/: pif_task.py
modelgenerator/rna_ss/: rna_ss_data.py  rna_ss_task.py
modelgenerator/tasks/: base.py  tasks.py
quick_start/: index.html
scripts/wandb_sweep/: README.md
search/: search_index.json
tests/: conftest.py
tests/adapters/: test_adapters.py
tests/backbones/: test_backbones.py
tests/data/: test_data.py
tutorials/dependency_mapping/: index.html
tutorials/finetuning_scheduler/: index.html
tutorials/kfold_cross_validation/: index.html
tutorials/protein_inverse_folding/: index.html
tutorials/rna_inverse_folding/: index.html
tutorials/rna_secondary_structure_prediction/: index.html
tutorials/zeroshot/: index.html
usage/: index.html
(+16 files in other folders)
