[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aido-cell"
version = "0.1.0"
description = "Standalone AIDO.Cell model package for single-cell RNA-seq analysis using HuggingFace transformers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "genbio-ai"},
]
keywords = ["single-cell", "RNA-seq", "transformer", "foundation-model", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.20.0",
    "anndata>=0.8.0",
    "scanpy>=1.10.0",
    "pandas>=1.3.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
flash_attn = [
    "flash-attn>=2.1.0",
]
peft = [
    "peft>=0.4.0",
]

[project.urls]
Repository = "https://github.com/genbio-ai/ModelGenerator/huggingface"

[tool.setuptools]
packages = ["aido_cell", "aido_cell.models", "aido_cell.utils"]

[tool.setuptools.package-data]
aido_cell = ["models/gene_lists/*.tsv"]
