[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aido-rna"
version = "0.1.0"
description = "Standalone AIDO.RNA model package for RNA analysis using HuggingFace transformers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "genbio-ai"},
]
keywords = ["RNA", "transformer", "foundation-model", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "tqdm>=4.60.0",
    "peft>=0.4.0",
]

[project.urls]
Repository = "https://github.com/genbio-ai/ModelGenerator/huggingface"

[tool.setuptools]
packages = ["aido_rna", "aido_rna.models", "aido_rna.utils"]

# Vocab
[tool.setuptools.package-data]
aido_rna = ["models/vocab.txt"]
